static/css/less_css/less/tba_bootstrap_overrides/tba_navbar_overrides.less
// navbar.less
.navbar {
  .brand {
    @elementHeight: 20px;
    padding: ((@navbarHeight - @elementHeight) / 2) 20px ((@navbarHeight - @elementHeight) / 2 + 2);
    font-weight: 600;
  }
  // Phones only
  @media (max-width: 767px) {
    .brand {
      font-size: 16px;
    }
  }
}

.navbar-search {
  margin-top: 6px;
  padding-left: 10px;
  .search-query {
    margin: 0;
    color: @black;
  
    &:focus,
    &.focused {
      text-shadow: none;
    }
    .border-radius(4px);
    
    // Phones only
    @media (max-width: 767px) {
      width: 100%;
      padding: 14px;
      box-sizing: border-box;
      -webkit-box-sizing:border-box;
      -moz-box-sizing: border-box;
      -ms-box-sizing: border-box;
    }
  }
}

.navbar .nav > li > a {
  @elementHeight: 20px;
  padding: ((@navbarHeight - @elementHeight) / 2 + 2) 10px ((@navbarHeight - @elementHeight) / 2 + 1);
  font-size: 14px;
  margin: 0;
}

.navbar .nav > .navbar-button:hover {
  background-color: @TBAblueDarker;
}

.navbar .navbar-inner {
  padding: 0;
}

.navbar .btn-navbar {
  padding: 14px 12px;
  margin: 0;
  .border-radius(0px);
  .box-shadow(none);
  background: transparent;
  cursor: pointer;
}

